initial working with homie V2 and platformIO

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,12 +12,21 @@
 lib_deps =
   git+https://github.com/marvinroger/homie-esp8266.git#develop
 
-[env:sonoff]
+[env:sonoff-serial]
 platform = espressif8266
 framework = arduino
 board = esp01_1m
 build_flags = -Wl,-Tesp8266.flash.1m64.ld
 lib_deps = ${global.lib_deps}
+
+[env:sonoff-ota]
+platform = espressif8266
+framework = arduino
+board = esp01_1m
+build_flags = -Wl,-Tesp8266.flash.1m64.ld
+lib_deps = ${global.lib_deps}
+upload_port = 10.11.23.140
+upload_flags = --auth=assugrin
 
 [env:witty-cloud]
 platform = espressif8266
