move to homie supplements library (WIP)

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,31 +9,30 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [global]
-lib_deps =
-  git+https://github.com/marvinroger/homie-esp8266.git#develop
+lib_deps = D:\Work\ArduinoLibraries\lib_homie-esp8266-supplements\
+ Hash
 
-[env:sonoff-serial]
-platform = espressif8266
-framework = arduino
-board = esp01_1m
+lib_extra_dirs = D:\Work\ArduinoLibraries\lib_homie-esp8266-supplements\
+
+
 build_flags = -Wl,-Tesp8266.flash.1m64.ld
+board = esp12e
+framework = arduino
+platform = espressif8266
+
+[env:serial]
+platform = ${global.platform}
+framework = ${global.framework}
+board = ${global.board}
+; build_flags = ${global.build_flags}
 lib_deps = ${global.lib_deps}
+;lib_extra_dirs = ${global.lib_extra_dirs}
 
-[env:sonoff-ota]
-platform = espressif8266
-framework = arduino
-board = esp01_1m
-build_flags = -Wl,-Tesp8266.flash.1m64.ld
+[env:ota]
+platform = ${global.platform}
+framework = ${global.framework}
+board = ${global.board}
+; build_flags = ${global.build_flags}
 lib_deps = ${global.lib_deps}
 upload_port = 10.11.23.140
 upload_flags = --auth=assugrin
-
-[env:witty-cloud]
-platform = espressif8266
-board = d1_mini
-framework = arduino
-lib_deps = ${global.lib_deps}
-upload_port = 10.11.23.58
-
-; src_filter = +<*> +<sender/> -<receiver/>
-; upload_port = /dev/ttyACM0
